--- a/atelier.ipynb
+++ b/atelier.ipynb
@@ -240,6 +240,53 @@
     "echantillon_aleatoire = data['id_client'].sample(n=2000, random_state=1)\n",
     "echantillon_aleatoire.to_csv('c1_valdes.txt', sep=';', index=False, header=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id_client                        0\n",
+       "age                              0\n",
+       "sexe                             0\n",
+       "situation_familiale            196\n",
+       "statut_logement               7995\n",
+       "revenu                        7638\n",
+       "flag_tel                         0\n",
+       "flag_email                       0\n",
+       "nb_credits_total                 0\n",
+       "mt_credits_total                 0\n",
+       "nb_credits_actuel                0\n",
+       "mt_credits_actuel                0\n",
+       "mt_echeances_actuel              0\n",
+       "duree_remboursement_actuel     401\n",
+       "mt_premier_credit                0\n",
+       "anc_premier_credit             798\n",
+       "canal_premier_credit             0\n",
+       "mt_dernier_credit                0\n",
+       "anc_dernier_credit               0\n",
+       "canal_dernier_credit             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
